--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ website:
         - file: OneShot/abstract.qmd
           text: "One Shot Imaging"
         - file: DigitalTwin/abstract.qmd
-          text: "Digital with with control"
+          text: "Digital twin with control"
   page-footer:
     center:
       - file: license.qmd
