francis workflow figure

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ website:
         contents:
         - file: DigitalTwin/abstract.qmd
           text: "Digital twin with control"
-        - file: WISER/abstract.qmd
+        - file: WISER/paper.qmd
           text: "Full-waveform variational inference"
   page-footer:
     center:
@@ -31,6 +31,7 @@ format:
       light: flatly
       dark: darkly
     css: styles.css
+    lightbox: True
     toc: true
     link-external-newwindow: True
 
