--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,8 +18,8 @@ website:
         contents:
         - file: OneShot/abstract.qmd
           text: "One Shot Imaging"
-        - file: DigitalTwin/abstract.qmd
-          text: "Digital twin with control"
+        - file: KarthaSEG2024/paper.qmd
+          text: "Domain transfer"
   page-footer:
     center:
       - file: license.qmd
