--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,7 @@ website:
           text: "One Shot Imaging"
         - file: DigitalTwin/abstract.qmd
           text: "Digital twin with control"
-        - file: OptimalDesign/abstract.qmd
+        - file: OptimalDesign/paper.qmd
           text: "Optimal Design for Common Image Gathers"
   page-footer:
     center:
