--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,8 +20,8 @@ website:
           text: "One Shot Imaging"
         - file: DigitalTwin/abstract.qmd
           text: "Digital twin with control"
-        - file: OptimalDesign/paper.qmd
-          text: "Optimal Design for Common Image Gathers"
+        - file: Rex2024SEG/paper.qmd
+          text: "Velocity Continuatition for Common Image Gathers"
   page-footer:
     center:
       - file: license.qmd
