mod index.qmd & .yml

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
       contents:
       - section: "Abstracts"
         contents:
-        - file: GahlotLi2024SEG/abstract.qmd
+        - file: GahlotLi2024SEG/paper.qmd
           text: "A Digital Twin for Geological Carbon Storage with Controlled Injectivity"
         - file: yin2024SEG/paper.qmd
           text: "WISER: full-Waveform variational Inference via Subsurface Extensions with Refinements"
