--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,7 +21,7 @@ website:
         - file: yin2024SEG/paper.qmd
           text: "WISER: full-Waveform variational Inference via Subsurface Extensions with Refinements"
         - file: Rex2024SEG/paper.qmd
-          text: "Velocity Continuatition for Common Image Gathers"
+          text: "Velocity Continuation for Common Image Gathers"
   page-footer:
     center:
       - file: license.qmd
