Velocity Continuation for Common Image Gathers with Fourier Neural Operators (#8)
Velocity Continuation for CIGs using FNOs

---------

Co-authored-by: turquoisedragon2926 <rarockiasamy3@gatech.edu>
Co-authored-by: Felix Herrmann <felix.herrmann@gatech.edu>
Co-authored-by: Ziyi Yin <ziyi.yin@gatech.edu>

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,8 @@ website:
           text: "A Digital Twin for Geological Carbon Storage with Controlled Injectivity"
         - file: yin2024SEG/paper.qmd
           text: "WISER: full-Waveform variational Inference via Subsurface Extensions with Refinements"
+        - file: Rex2024SEG/paper.qmd
+          text: "Velocity Continuation for Common Image Gathers"
   page-footer:
     center:
       - file: license.qmd
